--- a/music_timer/music_timer/Base.lproj/Main.storyboard
+++ b/music_timer/music_timer/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="getJsonData:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="9Fs-ep-Bwh"/>
+                                    <action selector="onClickGetButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="7oJ-1i-16X"/>
                                 </connections>
                             </button>
                         </subviews>
